<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group  android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"
            />

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/baseline_person_24"/>

        <item
            android:id="@+id/privacy"
            android:title="@string/privacy"
            android:icon="@drawable/baseline_settings_24"/>

        <item
            android:id="@+id/googleMaps"
            android:title="@string/googleMaps"
            android:icon="@drawable/map"/>


        <item
            android:id="@+id/viewBooking"
            android:title="@string/viewBookingInfo"
            android:icon="@drawable/baseline_bookmarks_24"/>
    </group>

    <item android:title="Dashboard"
        android:icon="@drawable/baseline_dashboard_24">
        <menu>
            <group  android:checkableBehavior="single">

                <item
                    android:id="@+id/notifications"
                    android:visible="false"
                    android:title="@string/notifiy"
                    android:icon="@drawable/baseline_notifications_active_24">
                </item>

                <item
                    android:id="@+id/statistics"
                    android:visible="false"
                    android:title="@string/statistics"
                    android:icon="@drawable/baseline_show_chart_24"/>

                <item
                    android:id="@+id/parkingGroups"
                    android:visible="false"
                    android:title="@string/parkingGroups"
                    android:icon="@drawable/baseline_local_parking_24"/>

                <item
                    android:id="@+id/parkings"
                    android:visible="false"
                    android:title="@string/parking"
                    android:icon="@drawable/parkings"/>

            </group>
        </menu>
    </item>

<item android:title="Others">
    <menu>
        <group  android:checkableBehavior="single">
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout" />
        </group>
    </menu>
</item>

</menu>